a more efficient way of fixing overflow

--- a/css/roty2017.css
+++ b/css/roty2017.css
@@ -26,7 +26,6 @@
 	width: 50%;
 	float: left;
 	height: 100%;
-	overflow: hidden;
 	background: #fff;
 	/* Centering with flexbox */
 	display: -webkit-box;
@@ -145,10 +144,6 @@
 .content {
     padding: 150px;
     line-height: 1.8;
-}
-
-.overflow {
-	overflow-y: auto;
 }
 
 /* No JS */
